--- a/tradic/templates/tradic/tradic.html
+++ b/tradic/templates/tradic/tradic.html
@@ -19,7 +19,7 @@
                 </div>
             {% endfor %}
         {% else %}
-            <p>Записів не існує</p>
+            <p6>Записів не існує</p6>
         {% endif %}
         {% if tradic.has_other_pages %}
         <nav class="list-pages">
