--- a/allbase/templates/allbase/allbase.html
+++ b/allbase/templates/allbase/allbase.html
@@ -22,7 +22,7 @@
                 </div>
             {% endfor %}
         {% else %}
-            <p>Записів не існує</p>
+            <p6>Записів не існує</p6>
         {% endif %}
         {% if allbase.has_other_pages %}
         <nav class="list-pages">
