--- a/sanda/templates/sanda/sanda.html
+++ b/sanda/templates/sanda/sanda.html
@@ -19,7 +19,7 @@
                 </div>
             {% endfor %}
         {% else %}
-            <p>Записів не існує</p>
+            <p6>Записів не існує</p6>
         {% endif %}
         {% if sanda.has_other_pages %}
         <nav class="list-pages">
