--- a/tradic/templates/tradic/tradicdetails_view.html
+++ b/tradic/templates/tradic/tradicdetails_view.html
@@ -7,6 +7,7 @@
 {% block content %}
     <div class="features">
         <h1>{{ tradic.name }}</h1>
+        <p1>Назва заходу: {{tradic.measure}}</p1>
         <p1>Регіон: {{tradic.city_region}}</p1>
         <p1>Дата народження: {{tradic.birthday}}</p1>
         <p1>Розряд: {{tradic.rang}}</p1>
