--- a/sanda/templates/sanda/sandadetails_view.html
+++ b/sanda/templates/sanda/sandadetails_view.html
@@ -7,6 +7,7 @@
 {% block content %}
     <div class="features">
         <h1>{{ sanda.name }}</h1>
+        <p1>Назва заходу: {{sanda.measure}}</p1>
         <p1>Регіон: {{sanda.city_region}}</p1>
         <p1>Дата народження: {{sanda.birthday}}</p1>
         <p1>Розряд: {{sanda.rang}}</p1>
