--- a/taolu/templates/taolu/details_view.html
+++ b/taolu/templates/taolu/details_view.html
@@ -7,6 +7,7 @@
 {% block content %}
     <div class="features">
         <h1>{{ taolu.name }}</h1>
+        <p1>Назва заходу: {{taolu.measure}}</p1>
         <p1>Регіон: {{taolu.city_region}}</p1>
         <p1>Дата народження: {{taolu.birthday}}</p1>
         <p1>Розряд: {{taolu.rang}}</p1>
